Misc. CSS issues with H3, mainly for alignment.

--- a/assets/benchmarks.css
+++ b/assets/benchmarks.css
@@ -45,6 +45,9 @@ h2 {
 h3 {
   font-weight: bold;
   font-family: "Trebuchet MS";
+  font-size: 1em;
+  margin-bottom: 0.75em;
+  margin-left: 5px;
 }
 a {
   color: #107fc9;
